--- a/css/styles.css
+++ b/css/styles.css
@@ -10,17 +10,26 @@ a{
 ul{
     list-style-type: none;
 }
+-----------------HEADER--------------------------------
 .header-logo{
     font-family: 'Raleway', sans-serif;
-    font-style: normal;
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
     color: #2E2F42;
     text-transform: uppercase;
-    align-items: center;
     letter-spacing: 0.03em;
 }
+.logo{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4D5AE5;
+}
+
 .header-list{
     font-weight: 500;
     font-size: 16px;
@@ -34,6 +43,7 @@ ul{
     color: #434455;
     letter-spacing: 0.02;
 }
+-------------------HERO----------------------------------------
 .hero-title{
     font-weight: 700;
     font-size: 56px;
@@ -50,7 +60,69 @@ ul{
     letter-spacing: 0.04em;
     color: #FFFFFF;
 }
+--------------------TECHNO--------------------------------
+.techno-title{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+}
+.techno-text{
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+----------------------------DOING-------------------------
+.doing-title{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+}
+-------------------TEAM--------------------------
+.team-title{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2E2F42;
+}
+.team-title-less{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+}
+.team-text{
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
 
+---------------FOOTER------------
+.footer-logo{
+font-family: 'Raleway', sans-serif;
+font-weight: 800;
+font-size: 18px;
+line-height: 1.17;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #F4F4FD;
+
+}
+.footer-text{
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #F4F4FD;
+}
 
     
     
