--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,10 @@
 :root{
-
+    --title-color: #2E2F42;
+    --subtitle-color: #434455;
 }
 body{
     font-family: 'Roboto', sans-serif;
+    background: #FFFFFF;
 }
 a{
     text-decoration: none;
@@ -10,13 +12,13 @@ a{
 ul{
     list-style-type: none;
 }
------------------HEADER--------------------------------
+/* -----------------HEADER-------------------------------- */
 .header-logo{
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
-    color: #2E2F42;
+    color: var(--title-color);
     text-transform: uppercase;
     letter-spacing: 0.03em;
 }
@@ -30,20 +32,47 @@ ul{
     color: #4D5AE5;
 }
 
-.header-list{
+.header-item .header-link{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #2E2F42;
+    color: var(--title-color);
+    text-decoration: none;
 }
-.adress-list{
+.header-item .header-link:hover,
+.header-item .header-link:focus{
+    color: #4D5AE5; 
+}
+.header-item .header-link:active{
+    color: #404BBF;
+}
+
+
+
+.adress-link{
     font-size: 16px;
     line-height: 1.5;
-    color: #434455;
-    letter-spacing: 0.02;
+    letter-spacing: 0.02em;
+    color: var(--subtitle-color);
+    font-style: normal;
+    
 }
--------------------HERO----------------------------------------
+.adress-link:hover,
+.adress-link:focus{
+    color: #4D5AE5;
+}
+.adress-link:active{
+    color: #404BBF; 
+}
+/* -------------------HERO---------------------------------------- */
+.hero{
+    width: 1440px;
+    height: 600px;
+    left: 0px;
+    top: 72px;
+    background: var(--title-color);
+}
 .hero-title{
     font-weight: 700;
     font-size: 56px;
@@ -51,62 +80,72 @@ ul{
     text-align: center;
     letter-spacing: 0.02em;
     color: #FFFFFF;
+    padding-left: 472px;
+    padding-top: 188px;
+    padding-right: 472px;
+    padding-bottom: 48px;
 }
 .hero-btn{
-    font-family: 'Roboto';
+    font-family: 'Roboto' ,sans-serif;
     font-weight: 500;
     font-size: 16px;
     align-items: center;
     letter-spacing: 0.04em;
     color: #FFFFFF;
+    width: 169px;
+    height: 56px;
+    background-color: #4D5AE5;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    cursor: pointer;
 }
---------------------TECHNO--------------------------------
+.hero-btn:hover,
+.hero-btn:focus{
+    background-color: #404BBF;
+    color: #FFFFFF;
+}
+/* --------------------TECHNO-------------------------------- */
 .techno-title{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: #2E2F42;
+    color: var(--title-color);
 }
 .techno-text{
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #434455;
+    color: var(--subtitle-color);
 }
-----------------------------DOING-------------------------
-.doing-title{
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: #2E2F42;
-}
--------------------TEAM--------------------------
+/* ----------------------------DOING------------------------- */
+
+/* -------------------TEAM-------------------------- */
+.doing-title,
 .team-title{
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
+    color: var(--title-color);
+    text-align: center;
     text-transform: capitalize;
-    color: #2E2F42;
 }
 .team-title-less{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: #2E2F42;
+    color: var(--title-color);
 }
 .team-text{
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #434455;
+    color: var(--subtitle-color);
 }
 
----------------FOOTER------------
+/* ---------------FOOTER------------ */
 .footer-logo{
 font-family: 'Raleway', sans-serif;
 font-weight: 800;
@@ -125,7 +164,58 @@ color: #F4F4FD;
 }
 
     
-    
+/* -----------PORTFOLIO--------------     */
+.filters-btn{
+box-sizing: border-box;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+width: 116px;
+height: 48px;
+background: #F4F4FD;
+border: 1px solid #E7E9FC;
+border-radius: 4px;
+font-family: 'Roboto', sans-serif;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+text-align: center;
+letter-spacing: 0.04em;
+color: #4D5AE5;
+cursor: pointer;
+
+}
+.filters-btn:hover,
+.filters-btn:focus{
+    background-color: #404BBF;
+    color: #FFFFFF;
+}
+ .filters-btn:active{
+    color: #404BBF; 
+}
+
+.filters-list{
+    display: flex;
+    justify-content: space-between; 
+}
+/* ---------------BANKING------------------- */
+.taxi-text,
+.instagram-text,
+.banking-text{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--title-color);
+}
+.instagram-textfilter,
+.taxi-textfilter,
+.banking-textfilter{
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--subtitle-color);
+}   
     
     
     
