--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 }
 body{
     font-family: 'Roboto', sans-serif;
+    color: var(--subtitle-color);
     background: #FFFFFF;
 }
 a{
@@ -13,6 +14,9 @@ ul{
     list-style-type: none;
 }
 /* -----------------HEADER-------------------------------- */
+.header-navigation{
+    list-style: none;
+}
 .header-logo{
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
@@ -30,6 +34,7 @@ ul{
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4D5AE5;
+    text-decoration: none;
 }
 
 .header-item .header-link{
@@ -67,23 +72,16 @@ ul{
 }
 /* -------------------HERO---------------------------------------- */
 .hero{
-    width: 1440px;
-    height: 600px;
-    left: 0px;
-    top: 72px;
     background: var(--title-color);
 }
 .hero-title{
     font-weight: 700;
     font-size: 56px;
-    line-height: 1.071;
+    line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
     color: #FFFFFF;
-    padding-left: 472px;
-    padding-top: 188px;
-    padding-right: 472px;
-    padding-bottom: 48px;
+   
 }
 .hero-btn{
     font-family: 'Roboto' ,sans-serif;
@@ -91,12 +89,9 @@ ul{
     font-size: 16px;
     align-items: center;
     letter-spacing: 0.04em;
+    line-height: 1.5;
     color: #FFFFFF;
-    width: 169px;
-    height: 56px;
     background-color: #4D5AE5;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
     cursor: pointer;
 }
 .hero-btn:hover,
@@ -121,6 +116,9 @@ ul{
 /* ----------------------------DOING------------------------- */
 
 /* -------------------TEAM-------------------------- */
+.team{
+    background: #F4F4FD;
+}
 .doing-title,
 .team-title{
     font-weight: 700;
@@ -137,6 +135,7 @@ ul{
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--title-color);
+    background-color: #FFFFFF;
 }
 .team-text{
     font-size: 16px;
@@ -146,14 +145,17 @@ ul{
 }
 
 /* ---------------FOOTER------------ */
+.footer{
+    background-color: var(--title-color);
+}
 .footer-logo{
-font-family: 'Raleway', sans-serif;
-font-weight: 800;
-font-size: 18px;
-line-height: 1.17;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: #F4F4FD;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #F4F4FD;
 
 }
 .footer-text{
@@ -166,23 +168,16 @@ color: #F4F4FD;
     
 /* -----------PORTFOLIO--------------     */
 .filters-btn{
-box-sizing: border-box;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-width: 116px;
-height: 48px;
-background: #F4F4FD;
-border: 1px solid #E7E9FC;
-border-radius: 4px;
-font-family: 'Roboto', sans-serif;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-text-align: center;
-letter-spacing: 0.04em;
-color: #4D5AE5;
-cursor: pointer;
+    background: #F4F4FD;
+    border: 1px solid #E7E9FC;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: 0.04em;
+    color: #4D5AE5;
+    cursor: pointer;
 
 }
 .filters-btn:hover,
@@ -195,10 +190,9 @@ cursor: pointer;
 }
 
 .filters-list{
-    display: flex;
-    justify-content: space-between; 
+   
 }
-/* ---------------BANKING------------------- */
+
 .taxi-text,
 .instagram-text,
 .banking-text{
