--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,22 @@
 :root{
     --title-color: #2E2F42;
     --subtitle-color: #434455;
+    --primary-color: #4D5AE5;
+    --btn-color: #F4f4fd;
+    --second-color: #404BBF;
+    --main-color: #FFFFFF;
 }
 body{
     font-family: 'Roboto', sans-serif;
     color: var(--subtitle-color);
-    background: #FFFFFF;
+    background: var(--main-color);
 }
-a{
-    text-decoration: none;
-}
-ul{
-    list-style-type: none;
-}
+
 /* -----------------HEADER-------------------------------- */
 .header-navigation{
     list-style: none;
 }
+
 .header-logo{
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
@@ -26,6 +26,12 @@ ul{
     text-transform: uppercase;
     letter-spacing: 0.03em;
 }
+.link{
+    text-decoration: none;
+}
+.list{
+    list-style-type: none;
+}
 .logo{
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
@@ -33,11 +39,11 @@ ul{
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #4D5AE5;
+    color: var(--primary-color);
     text-decoration: none;
 }
 
-.header-item .header-link{
+.header-link{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -45,14 +51,10 @@ ul{
     color: var(--title-color);
     text-decoration: none;
 }
-.header-item .header-link:hover,
-.header-item .header-link:focus{
-    color: #4D5AE5; 
+.header-link:hover,
+.header-link:focus{
+    color: var(--second-color); 
 }
-.header-item .header-link:active{
-    color: #404BBF;
-}
-
 
 
 .adress-link{
@@ -61,15 +63,12 @@ ul{
     letter-spacing: 0.02em;
     color: var(--subtitle-color);
     font-style: normal;
-    
 }
 .adress-link:hover,
 .adress-link:focus{
-    color: #4D5AE5;
+    color: var(--second-color);
 }
-.adress-link:active{
-    color: #404BBF; 
-}
+
 /* -------------------HERO---------------------------------------- */
 .hero{
     background: var(--title-color);
@@ -80,24 +79,23 @@ ul{
     line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
-    color: #FFFFFF;
+    color: var(--main-color);
    
 }
 .hero-btn{
     font-family: 'Roboto' ,sans-serif;
     font-weight: 500;
     font-size: 16px;
-    align-items: center;
     letter-spacing: 0.04em;
     line-height: 1.5;
-    color: #FFFFFF;
-    background-color: #4D5AE5;
+    color: var(--main-color);
+    background-color: var(--primary-color);
     cursor: pointer;
 }
 .hero-btn:hover,
 .hero-btn:focus{
-    background-color: #404BBF;
-    color: #FFFFFF;
+    background-color: var(--second-color);
+    color: var(--main-color);
 }
 /* --------------------TECHNO-------------------------------- */
 .techno-title{
@@ -117,7 +115,7 @@ ul{
 
 /* -------------------TEAM-------------------------- */
 .team{
-    background: #F4F4FD;
+    background-color: var(--main-color);
 }
 .doing-title,
 .team-title{
@@ -135,7 +133,7 @@ ul{
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--title-color);
-    background-color: #FFFFFF;
+    background-color: var(--main-color);
 }
 .team-text{
     font-size: 16px;
@@ -155,39 +153,35 @@ ul{
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #F4F4FD;
+    color: var(--btn-color);
 
 }
 .footer-text{
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #F4F4FD;
+    color: var(--btn-color);
 }
 
     
 /* -----------PORTFOLIO--------------     */
 .filters-btn{
-    background: #F4F4FD;
-    border: 1px solid #E7E9FC;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    text-align: center;
     letter-spacing: 0.04em;
-    color: #4D5AE5;
+    color: var(--primary-color);
+    background-color: var(--btn-color);
     cursor: pointer;
 
 }
 .filters-btn:hover,
 .filters-btn:focus{
-    background-color: #404BBF;
-    color: #FFFFFF;
+    background-color: var(--second-color);
+    color: var(--main-color);
 }
- .filters-btn:active{
-    color: #404BBF; 
-}
+ 
 
 .filters-list{
    
@@ -202,9 +196,9 @@ ul{
     letter-spacing: 0.02em;
     color: var(--title-color);
 }
-.instagram-textfilter,
-.taxi-textfilter,
-.banking-textfilter{
+.instagram-desc,
+.taxi-desc,
+.banking-desc{
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
