--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,9 @@ body{
 
 /* -------------------TEAM-------------------------- */
 .team{
+    background-color: var(--btn-color);
+}
+.team-item{
     background-color: var(--main-color);
 }
 .doing-title,
@@ -189,8 +192,7 @@ body{
    
 }
 
-.taxi-text,
-.instagram-text,
+
 .banking-text{
     font-weight: 500;
     font-size: 20px;
@@ -198,8 +200,8 @@ body{
     letter-spacing: 0.02em;
     color: var(--title-color);
 }
-.instagram-desc,
-.taxi-desc,
+
+
 .banking-desc{
     font-size: 16px;
     line-height: 1.5;
